--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -136,7 +136,7 @@
                                             skyline" {% endif %}
                                     >
                                     <i class="material-icons md-18">format_quote</i>
-                                    <i class="share-values"> </i>
+                                    <i class="share-values"> {{ pubs_shared|lookup:node.id|intword }}</i>
                                     </li>
                                     <li title="Responder" class="reply-comment"
                                         id="reply-caja-comentario-{{ node.pk }}">
