--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -32,7 +32,7 @@
                                     {% if node.parent %}
                                         <span class="chip">
                                                         {% avatar node.parent.author %}
-                                                        <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}</a>
+                                                        <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
                                                 </span>
                                     {% endif %}
                                 </h2>
