+ mejora en shared publications

--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -23,7 +23,7 @@
             Formulario para citar un comentario
             {% endcomment %}
             <div class="row">
-                <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper" data-id="">
+                <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper">
                     <div class="row">
                         <div id="status" class="col s12 title-page-wrapper">
                             <h4><i class="material-icons">format_quote</i> Citar publicacion</h4>
@@ -31,6 +31,7 @@
                         </div>
                     </div>
                     <form id="share_publication_form" action="" method="post">{% csrf_token %}
+                        {{ publication_shared.pk }}
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s12">
