--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -21,8 +21,7 @@
             Formulario para citar un comentario
         {% endcomment %}
         <div class="row">
-            <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper"
-                 data-id="" hidden>
+            <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper" style="display: none;">
                 <div class="row">
                     <div id="status" class="col s12 title-page-wrapper">
                         <h4><i class="material-icons" aria-hidden="true"></i> Citar publicacion</h4>
@@ -30,6 +29,7 @@
                     </div>
                 </div>
                 <form id="share_publication_form" action="" method="post">{% csrf_token %}
+                    {{ publication_shared.pk }}
                     <div class="row">
                         <div class="row">
                             <div class="input-field col s12">
