--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -195,23 +195,23 @@
                                                                 </div>
                                                             {% endif %}
                                                         {% endwith %}
-                                                    {% if node.shared_photo_publication.extra_content %}
+                                                    {% if node.shared_photo_publication.publication_photo_extra_content %}
                                                         {% comment %} Para publicaciones con URL {% endcomment %}
-                                                        {% if node.shared_photo_publication.extra_content.video %}
-                                                        {% video node.shared_photo_publication.extra_content.video as my_video %}
+                                                        {% if node.shared_photo_publication.publication_photo_extra_content.video %}
+                                                        {% video node.shared_photo_publication.publication_photo_extra_content.video as my_video %}
                                                            {% video my_video "medium" %}
                                                         {% endvideo %}
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
-                                                                <span class="card-title white-text">{{ node.shared_photo_publication.extra_content.title }}</span>
+                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.publication_photo_extra_content.image %}{{ node.shared_photo_publication.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <span class="card-title white-text">{{ node.shared_photo_publication.publication_photo_extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
-                                                                <p>{{ node.shared_photo_publication.extra_content.description }}.</p>
+                                                                <p>{{ node.shared_photo_publication.publication_photo_extra_content.description }}.</p>
                                                             </div>
                                                             <div class="card-action">
-                                                                <a href="{{ node.shared_photo_publication.extra_content.url }}">Ver</a>
+                                                                <a href="{{ node.shared_photo_publication.publication_photo_extra_content.url }}">Ver</a>
                                                             </div>
                                                         </div>
                                                             {% endif %}
