--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -186,14 +186,14 @@
                                 </div>
                             </div>
                         {% if user.id == node.p_author.id %}
-                        {% if node.event_type == 1  or node.event_type == 3 %}
-                            <div data-user-id="{{ node.p_author.pk }}" id="p_author-controls-{{ node.pk }}"
+                            <div id="p_author-controls-{{ node.pk }}"
                                  class="p_author-controls">
                                 <div class="row">
                                     <div class="col s12">
                                         <form method="post" accept-charset="utf-8">{% csrf_token %}
                                             <div class="row">
                                                 <div class="input-field col s12">
+                                                    <input type="number" name="pk" required value="{{ node.pk }}" hidden>
                                                     <i class="material-icons prefix">create</i>
                                                     <textarea class="materialize-textarea"
                                                               placeholder="Escribe el contenido del nuevo mensaje"
@@ -203,7 +203,7 @@
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
-                                                    <button data-id="{{ node.pk }}"
+                                                    <button
                                                             class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
                                                             type="button">Editar
                                                         <i class="material-icons right">mode_edit</i>
@@ -214,7 +214,6 @@
                                     </div>
                                 </div>
                             </div>
-                        {% endif %}
                     {% endif %}
                             {% include "photologue/new_reply.html" %}
                         </div>
