--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -17,13 +17,11 @@
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
                         {% if user.id == node.author.id %}
-                            {% if node.event_type == 1 or node.event_type == 3 %}
                                 <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
                                       data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
-                            {% endif %}
                         {% endif %}
                         <div class="row">
                             <div class="articulo col s12">
@@ -279,7 +277,6 @@
                         </div>
                     </div>
                     {% if user.id == node.author.id %}
-                        {% if node.event_type == 1  or node.event_type == 3 %}
                             <div data-user-id="{{ node.author.pk }}" id="author-controls-{{ node.pk }}"
                                  class="author-controls">
                                 <div class="row">
@@ -287,16 +284,18 @@
                                         <form method="post" accept-charset="utf-8">{% csrf_token %}
                                             <div class="row">
                                                 <div class="input-field col s12">
+                                                    <input type="number" name="pk" required value="{{ node.pk }}"
+                                                           hidden>
                                                     <i class="material-icons prefix">create</i>
                                                     <textarea class="materialize-textarea"
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;"></textarea>
+                                                              style="height: 11px;"></textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
-                                                    <button data-id="{{ node.pk }}"
+                                                    <button
                                                             class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
                                                             type="button">Editar
                                                         <i class="material-icons right">mode_edit</i>
@@ -307,7 +306,6 @@
                                     </div>
                                 </div>
                             </div>
-                        {% endif %}
                     {% endif %}
                     <div class="wrapper-reply">
                         {% include "account/new_reply.html" %}
