--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -141,33 +141,34 @@
                 </div>
             </div>
             {% if user.id == node.author.id %}
-                <div data-user-id="{{ node.author.pk }}" id="author-controls-{{ node.pk }}"
-                     class="author-controls">
-                    <div class="row">
-                        <div class="col s12">
-                            <form method="post" accept-charset="utf-8">{% csrf_token %}
-                                <div class="row">
-                                    <div class="input-field col s12">
-                                        <i class="material-icons prefix">create</i>
-                                        <textarea class="materialize-textarea"
-                                                  placeholder="Escribe el contenido del nuevo mensaje"
-                                                  id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
-                                                  name="content" rows="10" required="required"
-                                                  style="height: 11px;"></textarea>
-                                        <label for="id_caption-{{ node.pk }}">Editar comentario</label>
-                                    </div>
-                                    <div class="row">
-                                        <button data-id="{{ node.pk }}"
-                                                class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
-                                                type="button">Editar
-                                            <i class="material-icons right">mode_edit</i>
-                                        </button>
-                                    </div>
+                <div id="author-controls-{{ node.pk }}"
+                             class="author-controls">
+                            <div class="row">
+                                <div class="col s12">
+                                    <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                                <input type="number" name="pk" required value="{{ node.pk }}" hidden>
+                                                <i class="material-icons prefix">create</i>
+                                                <textarea class="materialize-textarea"
+                                                          placeholder="Escribe el contenido del nuevo mensaje"
+                                                          id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
+                                                          name="content" rows="10" required="required"
+                                                          style="height: 11px;"></textarea>
+                                                <label for="id_caption-{{ node.pk }}">Editar comentario</label>
+                                            </div>
+                                            <div class="row">
+                                                <button
+                                                        class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
+                                                        type="button">Editar
+                                                    <i class="material-icons right">mode_edit</i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
-                            </form>
+                            </div>
                         </div>
-                    </div>
-                </div>
             {% endif %}
             <div class="wrapper-reply">
                 {% include "groups/new_reply.html" %}
