--- a/skyfolk/templates/channels/new_photo_publication.html
+++ b/skyfolk/templates/channels/new_photo_publication.html
@@ -12,13 +12,11 @@
             data-delay="50"
             data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
             {% if user.id == node.p_author.id %}
-            {% if node.event_type == 1 or node.event_type == 3 %}
             <span data-id="{{ node.pk }}"
             class="top-options edit-comment tooltipped"
             data-position="bottom"
             data-delay="50"
             data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
-            {% endif %}
             {% endif %}
             <div class="row">
                 <div class="articulo col s12">
@@ -124,14 +122,14 @@
          </div>
      </div>
      {% if user.id == node.p_author.id %}
-     {% if node.event_type == 1  or node.event_type == 3 %}
-     <div data-user-id="{{ node.p_author.pk }}" id="p_author-controls-{{ node.pk }}"
+     <div id="p_author-controls-{{ node.pk }}"
      class="p_author-controls">
      <div class="row">
         <div class="col s12">
             <form method="post" accept-charset="utf-8">{% csrf_token %}
                 <div class="row">
                     <div class="input-field col s12">
+                        <input type="number" name="pk" required value="{{ node.pk }}" hidden>
                         <i class="material-icons prefix">create</i>
                         <textarea class="materialize-textarea"
                         placeholder="Escribe el contenido del nuevo mensaje"
@@ -141,7 +139,7 @@
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
-                        <button data-id="{{ node.pk }}"
+                        <button
                         class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
                         type="button">Editar
                         <i class="material-icons right">mode_edit</i>
@@ -152,7 +150,6 @@
     </div>
 </div>
 </div>
-{% endif %}
 {% endif %}
 <div class="wrapper-reply">
     {% include "photologue/new_reply.html" %}
