--- a/skyfolk/templates/channels/new_photo_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_publication_detail.html
@@ -12,13 +12,11 @@
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><a class="material-icons" href="/publication_pdetail/{{ node.id }}/">open_in_new</a></span>
                {% if user.id == node.p_author.id %}
-               {% if node.event_type == 1 or node.event_type == 3 %}
                <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
                                       data-tooltip="Editar comentario"><i class="material-icons">mode_edit</i></span>
-               {% endif %}
                {% endif %}
                <div class="row">
                 <div class="image col l2 m2 s2">
@@ -247,35 +245,34 @@
              </div>
          </div>
          {% if user.id == node.p_author.id %}
-         {% if node.event_type == 1  or node.event_type == 3 %}
-         <div data-user-id="{{ node.p_author.pk }}" id="author-controls-{{ node.pk }}"
-         class="author-controls">
-         <div class="row">
-            <div class="col s12">
-                <form method="post" accept-charset="utf-8">{% csrf_token %}
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">create</i>
-                            <textarea class="materialize-textarea"
-                            placeholder="Escribe el contenido del nuevo mensaje"
-                            id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
-                            name="content" rows="10" required="required"
-                            style="height: 10.9969px;"></textarea>
-                            <label for="id_caption-{{ node.pk }}">Editar comentario</label>
-                        </div>
-                        <div class="row">
-                            <button data-id="{{ node.pk }}"
-                            class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
-                            type="button">Editar
-                            <i class="material-icons right">mode_edit</i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-{% endif %}
+         <div id="p_author-controls-{{ node.pk }}"
+                                 class="p_author-controls">
+                                <div class="row">
+                                    <div class="col s12">
+                                        <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input type="number" name="pk" required value="{{ node.pk }}" hidden>
+                                                    <i class="material-icons prefix">create</i>
+                                                    <textarea class="materialize-textarea"
+                                                              placeholder="Escribe el contenido del nuevo mensaje"
+                                                              id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
+                                                              name="content" rows="10" required="required"
+                                                              style="height: 10.9969px;"></textarea>
+                                                    <label for="id_caption-{{ node.pk }}">Editar comentario</label>
+                                                </div>
+                                                <div class="row">
+                                                    <button
+                                                            class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
+                                                            type="button">Editar
+                                                        <i class="material-icons right">mode_edit</i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
 {% endif %}
 {% include "photologue/new_reply.html" %}
 </div>
