--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -147,13 +147,14 @@
                         </div>
                     </div>
                     {% if user.id == node.author.id %}
-                        <div data-user-id="{{ node.author.pk }}" id="author-controls-{{ node.pk }}"
+                        <div id="author-controls-{{ node.pk }}"
                              class="author-controls">
                             <div class="row">
                                 <div class="col s12">
                                     <form method="post" accept-charset="utf-8">{% csrf_token %}
                                         <div class="row">
                                             <div class="input-field col s12">
+                                                <input type="number" name="pk" required value="{{ node.pk }}" hidden>
                                                 <i class="material-icons prefix">create</i>
                                                 <textarea class="materialize-textarea"
                                                           placeholder="Escribe el contenido del nuevo mensaje"
@@ -163,7 +164,7 @@
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
-                                                <button data-id="{{ node.pk }}"
+                                                <button
                                                         class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
                                                         type="button">Editar
                                                     <i class="material-icons right">mode_edit</i>
